--- a/Unit I/Editables/package.json
+++ b/Unit I/Editables/package.json
@@ -2,10 +2,11 @@
   "name": "editables",
   "version": "1.0.0",
   "description": "",
-  "main": "HelloWorld.js",
+  "main": "VariableDeclaration.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "type": "module"
 }
